# qcloud-esp32s2

./: .gitignore  README.md
qcloud-iot-esp32s2-demo/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
qcloud-iot-esp32s2-demo/components/light_driver/: iot_led.c
qcloud-iot-esp32s2-demo/components/light_driver/include/: iot_led.h
qcloud-iot-esp32s2-demo/components/qcloud_iot/: CMakeLists.txt
qcloud-iot-esp32s2-demo/components/qcloud_iot/qcloud_iot_c_sdk/platform/: HAL_Device_freertos.c
qcloud-iot-esp32s2-demo/components/qcloud_iot/qcloud_iot_c_sdk/sdk_src/: data_template_event.c
qcloud-iot-esp32s2-demo/main/: CMakeLists.txt  board_ops.c  board_ops.h  main.c  prov_softap.c
qcloud-iot-esp32s2-demo/main/samples/data_template_light/: light_data_template_sample.c
qcloud-iot-esp32s2-demo/main/samples/gateway/: sub_dev001.c
qcloud-iot-esp32s2-demo/main/wifi_config/: qcloud_wifi_config.c  qcloud_wifi_config.h  wifi_config_error_handle.c  wifi_config_esp.c
